charts/interlink-wstunnel/deploy-interlink.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interlink-api-server
  namespace: interlink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interlink-api-server
  template:
    metadata:
      labels:
        app: interlink-api-server
    spec:
      containers:
      - name: interlink
        image: ghcr.io/interlink-hq/interlink/interlink:latest
        ports:
        - containerPort: 4000
          name: http
        volumeMounts:
        - name: il-config
          mountPath: /opt/interlink/config/InterLinkConfig.yaml
          subPath: InterLinkConfig.yaml                        
      volumes:
      - name: il-config
        configMap:
          name: interlink-config

---
apiVersion: v1
kind: Service
metadata:
  name: interlink-service
  namespace: interlink
spec:
  selector:
    app: interlink-api-server
  ports:
  - name: http
    port: 4000
    targetPort: 4000
  type: ClusterIP
